fix: fix bug in questions rating
